--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -134,6 +134,7 @@
             </script>
             {% else %}
                 {% if site.duoshuo.config %}
+               <!-- <div class="ds-thread" data-thread-key="请将此处替换成文章在你的站点中的ID" data-title="请替换成文章的标题" data-url="请替换成文章的网址"></div> -->
                 <script type="text/javascript">
                     var duoshuoQuery = {short_name:"{{ site.duoshuo.id }}"};
                     (function() {
